this is phone edit

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <div id="score">score: 0</div>
       <div id="highscore">Highest score: 0</div>
       <div id="board"></div>
+      <div class="btn-container position-absolute bottom-0 start-50 text-white">
+        <button class="btn btn-info ms-4 btntop">Top</button>
+        <div class="btntl"><button class="btnleft btn-info btn">left</button><button class="btn-info btn btnright">right</button></div>
+        <button class="btn btn-info text-white ms-4 btndown">down</button>
+      </div>
     </div>
     <script src="java.js"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.js"></script>
